<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormularioActivity">

    <TextView
        style="@style/Title"
        android:text="@string/nuevo_estudiante"
        />
    <EditText
        android:id="@+id/editNombre"
        style="@style/LongForm"
        android:inputType="textPersonName"
        android:hint="Nombre de estudiante"
        />
    <EditText
        android:id="@+id/editCodigo"
        style="@style/LongForm"
        android:inputType="textCapCharacters"
        android:hint="Código de estudiante"
        />

    <EditText
        android:id="@+id/editMateria"
        style="@style/LongForm"
        android:inputType="text"
        android:hint="Materia"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:columnCount="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_parcial1"
            />
        <EditText
            android:id="@+id/editParcial1"
            style="@style/ShortForm"
            android:inputType="numberDecimal"
            android:hint="@string/hint_nota"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_parcial2"
            />
        <EditText
            android:id="@+id/editParcial2"
            style="@style/ShortForm"
            android:inputType="numberDecimal"
            android:hint="@string/hint_nota"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_parcial3"
            />
        <EditText
            android:id="@+id/editParcial3"
            style="@style/ShortForm"
            android:inputType="numberDecimal"
            android:hint="@string/hint_nota"
            />

    </GridLayout>

    <Button
        android:id="@+id/buttonGuardar"
        style="@style/Button"
        android:layout_marginTop="32dp"
        android:text="@string/guardar"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>