<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonForm"
        style="@style/Button"
        android:text="@string/nuevo_estudiante"
        />

    <Button
        android:id="@+id/buttonLista"
        style="@style/Button"
        android:text="@string/lista_estudiantes"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mi_nombre"
        android:textAlignment="center"
        android:layout_gravity="center"
        />
</LinearLayout>